# git

./: .bazelrc  BUILD.bazel  MODULE.bazel  repo-settings.c  repository.h
Documentation/: git-clone.txt
Documentation/config/: commitgraph.txt
builtin/: BUILD.bazel  clone.c
compat/: BUILD.bazel
compat/simple-ipc/: BUILD
compiler-tricks/: BUILD.bazel
contrib/bazel/: defs.bzl
ewah/: BUILD.bazel
negotiator/: BUILD.bazel
odb/: BUILD.bazel
refs/: BUILD.bazel
reftable/: BUILD.bazel
sha1dc/: BUILD.bazel
sha256/: BUILD.bazel
t/: BUILD.bazel  bazel-test-wrapper.sh  lib-submodule-update.sh
t/helper/: BUILD.bazel
t/unit-tests/: BUILD.bazel
trace2/: BUILD.bazel
xdiff/: BUILD.bazel
