load("@rules_cc//cc:defs.bzl", "cc_library")
load("//contrib/bazel:defs.bzl", "GIT_COPTS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "sha256",
    srcs = [
        "block/sha256.c",
    ],
    hdrs = glob(
        ["**/*.h"],
        allow_empty = True,
    ),
    copts = GIT_COPTS,
    deps = [
        "//:git_compat_util_h",
    ],
)
