load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//contrib/bazel:defs.bzl", "GIT_COPTS")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test-tool",
    srcs = glob(
        [
            "*.c",
            "*.h",
        ],
        exclude = ["test-fake-ssh.c"],
    ) + [
        "//:common-main.c",
    ],
    copts = GIT_COPTS,
    deps = [
        "//:libgit",
        "//t/unit-tests:unit_test_lib",
    ],
)
